# AI-Health-Instagram-Engine

./: .env.sample  .gitignore  Dockerfile  Makefile  README.md  SYSTEM_ARCHITECTURE.md  check_sdk.py  debug_pipeline.py  docker-compose.yml  extend_token.py  find_ig_id.py  find_working_model.py  list_buckets.py  list_models.py  log.txt  pyproject.toml  run_logs.txt  run_logs_2.txt  run_logs_3.txt  run_logs_4.txt  test_imagen.py  test_imagen2.py  test_veo_vertex.py  walkthrough.md
.github/workflows/: daily_content.yml  daily_post.yml
.rules/: 01_architecture_patterns.md  02_coding_standards.md  03_documentation_logging.md  04_persistence_state.md  05_environment_secrets.md  onboarding_checklist.md
.rules/project/: architect.md  coder.md  reviewer.md  template_provider.md
.rules/standards/: constants.md  main.md  pipeline.md  prompts.md  schemas.md  storage_csv.md
facebook_bot_temp/: .gitignore  INICIAR_ROBOT.bat  INICIAR_ROBOT_PRO.bat  ai_bot.js  debug_ig.js  debug_token.js  drive_video_bot.js  facebookClient.js  find_ig.js  get_long_lived_token.js  get_page_token.js  get_page_tokens.js  googleDriveClient.js  imageService.js  index.js  package.json  perms.json  reel_bot.js  robot.js  robot_pro.js
flows/image_content_generator/pipeline/: main.py  (+4 more)
tools/audio_generation/: vertex_ai_tts.py
tools/common/: csv_processor.py  gemini_base.py  messenger.py
tools/image_generation/: gemini.py  midjourney.py  vertex_ai.py
tools/social_media/: facebook.py  instagram.py
tools/text_generation/: gemini.py
tools/video_editing/: ffmpeg.py  whisper.py  whisper_schemas.py
(+15 files in other folders)
